--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -3,7 +3,7 @@ title: "ModernApps Ninja Learning Path Hub"
 linkTitle: "Learning Path Hub"
 ---
 
-{{< blocks/cover title="This is a test!" image_anchor="top" height="full" color="orange" >}}
+{{< blocks/cover title="Welcome to the ModernApps Ninja Learning Path Hub, a hosting repository for ModernApps Ninja Learning Paths" image_anchor="top" height="full" color="orange" >}}
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
 		Start Course <i class="fas fa-arrow-alt-circle-right ml-2"></i>
